iLearnWeb v1.0.0 importent update_1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS + Flowbite React</title>
+    <meta name="description" content="iLearnWeb is a powerful school management platform used by multiple institutions to streamline student registration, administration, attendance tracking, communication, and results - all in one place" />
+    <meta name="keywords" content="school management, student registration, attendance tracking, results management, communication platform, sompukwane secondary school, sompukwane, iLearnWeb, ilearnweb, learning"/>
+    <title>iLearnWeb</title>
   </head>
   <body>
     <div id="root"></div>
