--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Heros/Hero_1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="iLearnWeb is a powerful school management platform used by multiple institutions to streamline student registration, administration, attendance tracking, communication, and results - all in one place" />
     <meta name="keywords" content="school management, student registration, attendance tracking, results management, communication platform, sompukwane secondary school, sompukwane, iLearnWeb, ilearnweb, learning"/>
